--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="sparkles" id="sparkles"></div>
 
   <div class="container" id="card">
-    <h1>Will you be my Valentine? 💖</h1>
+    <h1>Asooltyyy, will you be my Valentine? 💖</h1>
 
     <button id="yes">Yes 💘</button>
     <button id="no">No 💔</button>
@@ -106,3 +106,4 @@
 
 </body>
 </html>
+
